<resources>
    <string name="app_name">WorkFromHome</string>
    <string name="application_name">Work From Home</string>
    <string name="greet">Stay Home Stay Safe</string>
    <string name="un">Username</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="sign">Don\'t have an account?</string>
    <string name="Greet1">Hello!</string>
    <string name="Att">Attendance and Leave Requests</string>
    <string name="Progress">Progress Reports</string>
    <string name="View_prfle">View Profile</string>
    <string name="assgn">View Tasks</string>
    <string name="Trble">Having Trouble?</string>
    <string name="phone">0112335456</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_attendance2">Attendance</string>
    <string name="back">Back</string>
    <string name="atte">Attendance</string>
    <string name="Leave">Leave Requests</string>
    <string name="signout">Sign Out</string>
    <string name="LReq">Leave Requests</string>
    <string name="LF">Leave Form</string>
</resources>